--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id "io.freefair.lombok" version "5.3.0"
+//    id "io.freefair.lombok" version "5.3.0"
 
 }
 
@@ -19,6 +19,12 @@ dependencies {
 
     //reactor-debug-agent
     implementation('io.projectreactor:reactor-tools:3.4.0')
+
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.30'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
 
     //testing
     testImplementation("io.projectreactor:reactor-test:3.4.0")
