--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,17 @@ dependencies {
     //log - logback
     implementation("ch.qos.logback:logback-classic:1.2.3")
 
+    //webclient-dependencies
+    implementation 'org.springframework:spring-webflux:5.3.4'
+    implementation 'io.projectreactor.netty:reactor-netty:1.0.4'
+    //jackson dependencies
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.11.1'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.1'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.1'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.11.1'
+
+
     //reactor-debug-agent
     implementation('io.projectreactor:reactor-tools:3.4.0')
 
